# fusio

./: CLAUDE.md  pyproject.toml
.github/workflows/: mypy.yaml  pytest.yaml
src/fusio/: __init__.py
src/fusio/classes/: gacode.py  imas.py  io.py  jintrac.py  omas.py  plasma.py  torax.py  transp.py
src/fusio/scripts/: standalone_qualikiz.py  standalone_tglf.py
src/fusio/utils/: cocos_tools.py  eqdsk_tools.py  field_definitions.py  math_tools.py  plasma_tools.py
tests/: conftest.py  test_gacode.py  test_plasma.py  test_plasma_tools.py  test_roundtrip_eqdsk_gacode_imas.py
