[build-system]
requires = ["setuptools>=62.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fusio"
description = "Input file conversions to popular file formats in fusion research"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {file = "LICENSE"}
keywords = ["fusion", "interfaces"]
authors = [
  { name = "Aaron Ho", email = "aaronkho@mit.edu" }
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: User Interfaces",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]

dependencies = [
  "numpy",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/aaronkho/fusio"

[tool.setuptools.dynamic]
version = {attr = "fusio.__version__"}
